--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="renderer" content="webkit"/>
+    <meta name="force-rendering" content="webkit"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>chatroom</title>
     <script src="https://cdn.bootcss.com/socket.io/2.1.1/socket.io.js"></script>
